# gemeinde-monitor

./: .gitignore  Dockerfile  docker-compose.yml  find_domains.py  find_vote_pages.py  main.py  monitor_config.json  monitor_votes.py  pyproject.toml
data/: DATASET XLSX 03-06-2026.xlsx  current_election_results.xlsx  gemeinden_5521.xlsx  gemeinden_5800.xlsx  gemeinden_5970.xlsx  gemeinden_6310.xlsx  gemeinden_6800.xlsx  gemeinden_6821.xlsx  gemeinden_6822.xlsx
scratch/: analyze_diff_patterns.py  debug_nidau.py  inspect_noise.py  inspect_satigny.py  inspect_saviese.py  inspect_troistorrents.py  test_backend.py
static/: app.js  index.html  style.css
