[project]
name = "gemeinden-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.3",
    "polars>=1.41.2",
    "httpx>=0.28.1",
    "beautifulsoup4>=4.13.3",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "openpyxl>=3.1.5",
]
